okf/products/scalardb/3.14/scalardb-core-status-codes.md
---
type: Troubleshooting
title: ScalarDB Core Error Codes
description: This page provides a list of error codes in ScalarDB Core.
resource: https://scalardb.scalar-labs.com/docs/3.14/scalardb-core-status-codes/
tags:
- scalardb
- v3.14
- phase:operate
- section:troubleshoot
- edition:community
- edition:enterprise-standard
- edition:enterprise-premium
- unmaintained
status: deprecated
product: scalardb
product_title: ScalarDB
version: '3.14'
patch_version: 3.14.6
doc_id: scalardb-core-status-codes
lifecycle_phase: operate
breadcrumb:
- Troubleshoot
- Error Codes
editions:
- Community
- Enterprise Standard
- Enterprise Premium
generated:
  by: process:okf-build/1.0.0
  at: '2026-08-04T23:50:57Z'
sources:
- id: docs-scalardb
  resource: https://github.com/scalar-labs/docs-scalardb/blob/6126dfe2f56389351d88b134752618641f9771dd/versioned_docs/version-3.14/scalardb-core-status-codes.mdx
  title: ScalarDB documentation source (MDX)
  author: process:scalar-labs/docs-scalardb
  last_modified: '2026-08-04T15:05:02Z'
---

# ScalarDB Core Error Codes

This page provides a list of error codes in ScalarDB Core.

## Error code classes and descriptions

| Class        | Description                                              |
|:-------------|:---------------------------------------------------------|
| `CORE-1xxxx` | Errors for the user error category                       |
| `CORE-2xxxx` | Errors for the concurrency error category                |
| `CORE-3xxxx` | Errors for the internal error category                   |
| `CORE-4xxxx` | Errors for the unknown transaction status error category |

## `CORE-1xxxx` status codes

The following are status codes and messages for the user error category.

### `CORE-10000`

**Message**

```markdown
Only a single-column index is supported. Operation: %s
```

### `CORE-10001`

**Message**

```markdown
The column of the specified index key is not indexed. Operation: %s
```

### `CORE-10002`

**Message**

```markdown
The index key is not properly specified. Operation: %s
```

### `CORE-10003`

**Message**

```markdown
Clustering keys cannot be specified when using an index. Operation: %s
```

### `CORE-10004`

**Message**

```markdown
Orderings cannot be specified when using an index. Operation: %s
```

### `CORE-10005`

**Message**

```markdown
The limit cannot be negative. Operation: %s
```

### `CORE-10006`

**Message**

```markdown
Cross-partition scan is not enabled. Operation: %s
```

### `CORE-10007`

**Message**

```markdown
Cross-partition scan ordering is not enabled. Operation: %s
```

### `CORE-10008`

**Message**

```markdown
Cross-partition scan filtering is not enabled. Operation: %s
```

### `CORE-10009`

**Message**

```markdown
The specified projection is not found. Projection: %s, Operation: %s
```

### `CORE-10010`

**Message**

```markdown
The clustering key boundary is not properly specified. Operation: %s
```

### `CORE-10011`

**Message**

```markdown
The start clustering key is not properly specified. Operation: %s
```

### `CORE-10012`

**Message**

```markdown
The end clustering key is not properly specified. Operation: %s
```

### `CORE-10013`

**Message**

```markdown
Orderings are not properly specified. Operation: %s
```

### `CORE-10014`

**Message**

```markdown
The specified ordering column is not found. Ordering: %s, Operation: %s
```

### `CORE-10015`

**Message**

```markdown
The condition is not properly specified. Operation: %s
```

### `CORE-10016`

**Message**

```markdown
The table does not exist. Table: %s
```

### `CORE-10017`

**Message**

```markdown
The column value is not properly specified. Column: %s, Operation: %s
```

### `CORE-10018`

**Message**

```markdown
The mutations are empty
```

### `CORE-10019`

**Message**

```markdown
Mutations that span multiple partitions are not supported. Mutations: %s
```

### `CORE-10020`

**Message**

```markdown
The partition key is not properly specified. Operation: %s
```

### `CORE-10021`

**Message**

```markdown
The clustering key is not properly specified. Operation: %s
```

### `CORE-10022`

**Message**

```markdown
The authentication and authorization feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `CORE-10023`

**Message**

```markdown
This condition is not allowed for the PutIf operation. Condition: %s
```

### `CORE-10024`

**Message**

```markdown
This condition is not allowed for the DeleteIf operation. Condition: %s
```

### `CORE-10025`

**Message**

```markdown
Operator must be LIKE or NOT_LIKE. Operator: %s
```

### `CORE-10026`

**Message**

```markdown
An escape character must be a string of a single character or an empty string
```

### `CORE-10027`

**Message**

```markdown
The LIKE pattern must not be null
```

### `CORE-10028`

**Message**

```markdown
The LIKE pattern must not include only an escape character
```

### `CORE-10029`

**Message**

```markdown
The LIKE pattern must not end with an escape character
```

### `CORE-10030`

**Message**

```markdown
The column %s does not exist
```

### `CORE-10031`

**Message**

```markdown
This operation is not supported when getting records of a database without using an index
```

### `CORE-10032`

**Message**

```markdown
This operation is not supported when getting records of a database by using an index
```

### `CORE-10033`

**Message**

```markdown
This operation is not supported when scanning all the records of a database or scanning records of a database by using an index
```

### `CORE-10034`

**Message**

```markdown
This operation is supported only when scanning records of a database by using an index
```

### `CORE-10035`

**Message**

```markdown
This operation is not supported when scanning records of a database by using an index
```

### `CORE-10037`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `CORE-10038`

**Message**

```markdown
One or more columns must be specified.
```

### `CORE-10039`

**Message**

```markdown
One or more partition keys must be specified.
```

### `CORE-10040`

**Message**

```markdown
The column definition must be specified since %s is specified as a partition key
```

### `CORE-10041`

**Message**

```markdown
The column definition must be specified since %s is specified as a clustering key
```

### `CORE-10042`

**Message**

```markdown
Invalid ID specified. ID: %d
```

### `CORE-10043`

**Message**

```markdown
The transaction is not active. Status: %s
```

### `CORE-10044`

**Message**

```markdown
The transaction has already been committed or rolled back. Status: %s
```

### `CORE-10045`

**Message**

```markdown
The transaction has not been prepared. Status: %s
```

### `CORE-10046`

**Message**

```markdown
The transaction has not been prepared or validated. Status: %s
```

### `CORE-10047`

**Message**

```markdown
The transaction already exists
```

### `CORE-10048`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired
```

### `CORE-10049`

**Message**

```markdown
%s is the system namespace name
```

### `CORE-10050`

**Message**

```markdown
The namespace already exists. Namespace: %s
```

### `CORE-10051`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `CORE-10052`

**Message**

```markdown
The table already exists. Table: %s
```

### `CORE-10053`

**Message**

```markdown
The namespace is not empty. Namespace: %s; Tables in the namespace: %s
```

### `CORE-10054`

**Message**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `CORE-10055`

**Message**

```markdown
The index already exists. Table: %s; Column: %s
```

### `CORE-10056`

**Message**

```markdown
The index does not exist. Table: %s; Column: %s
```

### `CORE-10057`

**Message**

```markdown
The column already exists. Table: %s; Column: %s
```

### `CORE-10058`

**Message**

```markdown
The operation does not have the target namespace or table name. Operation: %s
```

### `CORE-10059`

**Message**

```markdown
The specified value of the property '%s' is not a number. Value: %s
```

### `CORE-10060`

**Message**

```markdown
The specified value of the property '%s' is not a boolean. Value: %s
```

### `CORE-10061`

**Message**

```markdown
Reading the file failed. File: %s
```

### `CORE-10062`

**Message**

```markdown
The property 'scalar.db.cross_partition_scan.enabled' must be set to true to use cross-partition scan with filtering or ordering
```

### `CORE-10063`

**Message**

```markdown
This column value is out of range for BigInt. Value: %s
```

### `CORE-10064`

**Message**

```markdown
This type is not supported. Name: %s, Type: %s
```

### `CORE-10065`

**Message**

```markdown
Storage '%s' is not found
```

### `CORE-10066`

**Message**

```markdown
Transaction manager '%s' is not found
```

### `CORE-10068`

**Message**

```markdown
Please use scan() for non-exact match selection. Operation: %s
```

### `CORE-10069`

**Message**

```markdown
Import-related functionality is not supported in Cassandra
```

### `CORE-10070`

**Message**

```markdown
The %s network strategy does not exist
```

### `CORE-10071`

**Message**

```markdown
The property 'scalar.db.contact_port' must be greater than or equal to zero
```

### `CORE-10073`

**Message**

```markdown
The BLOB type is not supported for clustering keys in Cosmos DB. Column: %s
```

### `CORE-10074`

**Message**

```markdown
Import-related functionality is not supported in Cosmos DB
```

### `CORE-10075`

**Message**

```markdown
The property 'scalar.db.contact_points' must not be empty
```

### `CORE-10076`

**Message**

```markdown
Cosmos DB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BLOB type in conditions. Mutation: %s
```

### `CORE-10077`

**Message**

```markdown
The specified consistency level is not supported. Consistency level: %s
```

### `CORE-10078`

**Message**

```markdown
0x00 bytes are not accepted in BLOB values in DESC order
```

### `CORE-10079`

**Message**

```markdown
Cannot encode a Text value that contains '\u0000'
```

### `CORE-10081`

**Message**

```markdown
An index column cannot be set to null or an empty value for Text or Blob in DynamoDB. Operation: %s
```

### `CORE-10082`

**Message**

```markdown
DynamoDB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BOOLEAN type in conditions. Mutation: %s
```

### `CORE-10083`

**Message**

```markdown
Nested multi-storage definitions are not supported. Storage: %s
```

### `CORE-10084`

**Message**

```markdown
Storage not found. Storage: %s
```

### `CORE-10085`

**Message**

```markdown
The namespace name is not acceptable. Namespace: %s
```

### `CORE-10086`

**Message**

```markdown
The table name is not acceptable. Table: %s
```

### `CORE-10087`

**Message**

```markdown
Importing tables is not allowed in the RDB engine. RDB engine: %s
```

### `CORE-10088`

**Message**

```markdown
The %s table must have a primary key
```

### `CORE-10089`

**Message**

```markdown
The RDB engine is not supported. JDBC connection URL: %s
```

### `CORE-10090`

**Message**

```markdown
Data type %s(%d) is not supported: %s
```

### `CORE-10091`

**Message**

```markdown
Data type %s is not supported: %s
```

### `CORE-10092`

**Message**

```markdown
Getting a transaction state is not supported in JDBC transactions
```

### `CORE-10093`

**Message**

```markdown
Rolling back a transaction is not supported in JDBC transactions
```

### `CORE-10094`

**Message**

```markdown
Coordinator tables already exist
```

### `CORE-10095`

**Message**

```markdown
Coordinator tables do not exist
```

### `CORE-10096`

**Message**

```markdown
The namespace %s is reserved. Any operations on this namespace are not allowed
```

### `CORE-10097`

**Message**

```markdown
Mutating transaction metadata columns is not allowed. Table: %s; Column: %s
```

### `CORE-10098`

**Message**

```markdown
A %s condition is not allowed on Put operations
```

### `CORE-10099`

**Message**

```markdown
A %s condition is not allowed on Delete operations
```

### `CORE-10100`

**Message**

```markdown
The condition is not allowed to target transaction metadata columns. Column: %s
```

### `CORE-10101`

**Message**

```markdown
The column '%s' is reserved as transaction metadata
```

### `CORE-10102`

**Message**

```markdown
Non-primary key columns with the 'before_' prefix, '%s', are reserved as transaction metadata
```

### `CORE-10103`

**Message**

```markdown
Put cannot have a condition when the target record is unread and implicit pre-read is disabled. Please read the target record beforehand or enable implicit pre-read: %s
```

### `CORE-10104`

**Message**

```markdown
Writing already-deleted data is not allowed
```

### `CORE-10105`

**Message**

```markdown
Getting data neither in the read set nor the delete set is not allowed
```

### `CORE-10106`

**Message**

```markdown
Reading already-written data is not allowed
```

### `CORE-10107`

**Message**

```markdown
The transaction is not validated. When using the EXTRA_READ serializable strategy, you need to call validate() before calling commit()
```

### `CORE-10108`

**Message**

```markdown
DynamoDB cannot batch more than 100 mutations at once
```

### `CORE-10109`

**Message**

```markdown
The partition keys of the table %s.%s were modified, but altering partition keys is not supported
```

### `CORE-10110`

**Message**

```markdown
The clustering keys of the table %s.%s were modified, but altering clustering keys is not supported
```

### `CORE-10111`

**Message**

```markdown
The clustering ordering of the table %s.%s were modified, but altering clustering ordering is not supported
```

### `CORE-10112`

**Message**

```markdown
The column %s of the table %s.%s has been deleted. Column deletion is not supported when altering a table
```

### `CORE-10113`

**Message**

```markdown
The data type of the column %s of the table %s.%s was modified, but altering data types is not supported
```

### `CORE-10114`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--repair-all' option
```

### `CORE-10115`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--alter' option
```

### `CORE-10116`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--import' option
```

### `CORE-10117`

**Message**

```markdown
Specifying the '--coordinator' option with the '--import' option is not allowed. Create Coordinator tables separately
```

### `CORE-10118`

**Message**

```markdown
Reading the configuration file failed. File: %s
```

### `CORE-10119`

**Message**

```markdown
Reading the schema file failed. File: %s
```

### `CORE-10120`

**Message**

```markdown
Parsing the schema JSON failed. Details: %s
```

### `CORE-10121`

**Message**

```markdown
The table name must contain the namespace and the table. Table: %s
```

### `CORE-10122`

**Message**

```markdown
The partition key must be specified. Table: %s
```

### `CORE-10123`

**Message**

```markdown
Invalid clustering-key format. The clustering key must be in the format of 'column_name' or 'column_name ASC/DESC'. Table: %s; Clustering key: %s
```

### `CORE-10124`

**Message**

```markdown
Columns must be specified. Table: %s
```

### `CORE-10125`

**Message**

```markdown
Invalid column type. Table: %s; Column: %s; Type: %s
```

### `CORE-10126`

**Message**

```markdown
The mutation type is not supported. Only the Put or Delete type is supported. Mutation: %s
```

### `CORE-10127`

**Message**

```markdown
This condition is not allowed for the UpdateIf operation. Condition: %s
```

### `CORE-10128`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cassandra
```

### `CORE-10129`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cosmos DB
```

### `CORE-10130`

**Message**

```markdown
Cross-partition scan with ordering is not supported in DynamoDB
```

### `CORE-10131`

**Message**

```markdown
The directory '%s' does not have write permissions. Please ensure that the current user has write access to the directory.
```

### `CORE-10132`

**Message**

```markdown
Failed to create the directory '%s'. Please check if you have sufficient permissions and if there are any file system restrictions. Details: %s
```

### `CORE-10133`

**Message**

```markdown
Directory path cannot be null or empty.
```

### `CORE-10134`

**Message**

```markdown
No file extension was found on the provided file name %s.
```

### `CORE-10135`

**Message**

```markdown
Invalid file extension: %s. Allowed extensions are: %s
```

### `CORE-10136`

**Message**

```markdown
Getting a transaction state is not supported in single CRUD operation transactions
```

### `CORE-10137`

**Message**

```markdown
Rolling back a transaction is not supported in single CRUD operation transactions
```

### `CORE-10138`

**Message**

```markdown
Multiple mutations are not supported in single CRUD operation transactions
```

### `CORE-10139`

**Message**

```markdown
Beginning a transaction is not allowed in single CRUD operation transactions
```

### `CORE-10140`

**Message**

```markdown
Resuming a transaction is not allowed in single CRUD operation transactions
```

### `CORE-10141`

**Message**

```markdown
Using the group commit feature on the Coordinator table with a two-phase commit interface is not allowed
```

### `CORE-10142`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `CORE-10143`

**Message**

```markdown
The encryption feature is not enabled. To encrypt data at rest, you must enable this feature. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `CORE-10144`

**Message**

```markdown
The variable key column size must be greater than or equal to 64
```

### `CORE-10145`

**Message**

```markdown
The value of the column %s in the primary key contains an illegal character. Primary-key columns must not contain any of the following characters in Cosmos DB: ':', '/', '\', '#', '?'. Value: %s
```

### `CORE-10146`

**Message**

```markdown
Inserting already-written data is not allowed
```

### `CORE-10147`

**Message**

```markdown
Deleting already-inserted data is not allowed
```

### `CORE-10148`

**Message**

```markdown
Invalid key: Column %s does not exist in the table %s in namespace %s.
```

### `CORE-10149`

**Message**

```markdown
Invalid base64 encoding for blob value for column %s in table %s in namespace %s
```

### `CORE-10150`

**Message**

```markdown
Invalid number specified for column %s in table %s in namespace %s
```

### `CORE-10151`

**Message**

```markdown
Method null argument not allowed
```

### `CORE-10153`

**Message**

```markdown
The provided clustering key %s was not found
```

### `CORE-10154`

**Message**

```markdown
The column '%s' was not found
```

### `CORE-10155`

**Message**

```markdown
The provided partition key is incomplete. Required key: %s
```

### `CORE-10156`

**Message**

```markdown
The provided clustering key order does not match the table schema. Required order: %s
```

### `CORE-10157`

**Message**

```markdown
The provided partition key order does not match the table schema. Required order: %s
```

### `CORE-10165`

**Message**

```markdown
Missing namespace or table: %s, %s
```

### `CORE-10166`

**Message**

```markdown
Failed to retrieve table metadata. Details: %s
```

### `CORE-10167`

**Message**

```markdown
Duplicate data mappings found for table '%s' in the control file
```

### `CORE-10168`

**Message**

```markdown
No mapping found for column '%s' in table '%s' in the control file. Control file validation set at 'FULL'. All columns need to be mapped.
```

### `CORE-10169`

**Message**

```markdown
The control file is missing data mappings
```

### `CORE-10170`

**Message**

```markdown
The target column '%s' for source field '%s' could not be found in table '%s'
```

### `CORE-10171`

**Message**

```markdown
The required partition key '%s' is missing in the control file mapping for table '%s'
```

### `CORE-10172`

**Message**

```markdown
The required clustering key '%s' is missing in the control file mapping for table '%s'
```

### `CORE-10173`

**Message**

```markdown
Duplicated data mappings found for column '%s' in table '%s'
```

### `CORE-10174`

**Message**

```markdown
Missing required field or column mapping for clustering key %s
```

### `CORE-10175`

**Message**

```markdown
Missing required field or column mapping for partition key %s
```

### `CORE-10176`

**Message**

```markdown
Missing field or column mapping for %s
```

### `CORE-10177`

**Message**

```markdown
Something went wrong while converting the ScalarDB values to strings. The table metadata and Value datatype probably do not match. Details: %s
```

### `CORE-10178`

**Message**

```markdown
The provided file format is not supported : %s
```

### `CORE-10179`

**Message**

```markdown
Could not find the partition key
```

### `CORE-10180`

**Message**

```markdown
The source record needs to contain all fields if the UPSERT turns into an INSERT
```

### `CORE-10181`

**Message**

```markdown
Record already exists
```

### `CORE-10182`

**Message**

```markdown
Record was not found
```

### `CORE-10183`

**Message**

```markdown
Could not find the clustering key
```

### `CORE-10184`

**Message**

```markdown
No table metadata found
```

### `CORE-10185`

**Message**

```markdown
The data mapping source field '%s' for table '%s' is missing in the json data record
```

### `CORE-10186`

**Message**

```markdown
The CSV row: %s does not match header: %s.
```

### `CORE-10187`

**Message**

```markdown
Expected JSON file content to be an array
```

### `CORE-10189`

**Message**

```markdown
Missing option: either '--namespace' and'--table' or '--control-file' options must be specified.
```

### `CORE-10190`

**Message**

```markdown
The file '%s' specified by the argument '%s' does not exist.
```

### `CORE-10191`

**Message**

```markdown
Cannot write to the log directory: %s
```

### `CORE-10192`

**Message**

```markdown
Failed to create the log directory: %s
```

### `CORE-10193`

**Message**

```markdown
Failed to parse the control file: %s
```

### `CORE-10194`

**Message**

```markdown
No permission to create or write files in the directory: %s
```

### `CORE-10195`

**Message**

```markdown
Failed to create the directory: %s
```

### `CORE-10196`

**Message**

```markdown
Path exists but is not a directory: %s
```

### `CORE-10197`

**Message**

```markdown
File path must not be blank.
```

### `CORE-10198`

**Message**

```markdown
File not found: %s
```

### `CORE-10199`

**Message**

```markdown
Invalid date time value specified for column %s in table %s in namespace %s.
```

### `CORE-10200`

**Message**

```markdown
Key-value cannot be null or empty
```

### `CORE-10201`

**Message**

```markdown
Invalid key-value format: %s
```

### `CORE-10202`

**Message**

```markdown
Value must not be null
```

### `CORE-10203`

**Message**

```markdown
Delimiter must not be null
```

### `CORE-10204`

**Message**

```markdown
Config file path must not be blank
```

### `CORE-10249`

**Message**

```markdown
The namespace has non-ScalarDB tables and cannot be dropped. Namespace: %s; Tables in the namespace: %s
```

## `CORE-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `CORE-20000`

**Message**

```markdown
No mutation was applied
```

### `CORE-20001`

**Message**

```markdown
Logging failed in the batch
```

### `CORE-20002`

**Message**

```markdown
The operation failed in the batch with type %s
```

### `CORE-20003`

**Message**

```markdown
An error occurred in the batch. Details: %s
```

### `CORE-20004`

**Message**

```markdown
A Paxos phase in the CAS operation failed
```

### `CORE-20005`

**Message**

```markdown
The learn phase in the CAS operation failed
```

### `CORE-20006`

**Message**

```markdown
A simple write operation failed
```

### `CORE-20007`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `CORE-20008`

**Message**

```markdown
A RetryWith error occurred in the mutation. Details: %s
```

### `CORE-20009`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `CORE-20010`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `CORE-20011`

**Message**

```markdown
A conflict occurred. Please try restarting the transaction. Details: %s
```

### `CORE-20012`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `CORE-20013`

**Message**

```markdown
The record being prepared already exists
```

### `CORE-20014`

**Message**

```markdown
A conflict occurred when preparing records
```

### `CORE-20015`

**Message**

```markdown
The committing state in the coordinator failed. The transaction has been aborted
```

### `CORE-20016`

**Message**

```markdown
A conflict occurred during implicit pre-read
```

### `CORE-20017`

**Message**

```markdown
This record needs to be recovered
```

### `CORE-20018`

**Message**

```markdown
The record does not exist, so the %s condition is not satisfied
```

### `CORE-20019`

**Message**

```markdown
The record exists, so the %s condition is not satisfied
```

### `CORE-20020`

**Message**

```markdown
The condition on the column '%s' is not satisfied
```

### `CORE-20021`

**Message**

```markdown
Reading empty records might cause a write skew anomaly, so the transaction has been aborted for safety purposes
```

### `CORE-20022`

**Message**

```markdown
An anti-dependency was found. The transaction has been aborted
```

### `CORE-20023`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

### `CORE-20024`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `CORE-20025`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

## `CORE-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `CORE-30000`

**Message**

```markdown
Creating the namespace failed. Namespace: %s
```

### `CORE-30001`

**Message**

```markdown
Dropping the namespace failed. Namespace: %s
```

### `CORE-30002`

**Message**

```markdown
Creating the table failed. Table: %s
```

### `CORE-30003`

**Message**

```markdown
Dropping the table failed. Table: %s
```

### `CORE-30004`

**Message**

```markdown
Truncating the table failed. Table: %s
```

### `CORE-30005`

**Message**

```markdown
Creating the index failed. Table: %s, Column: %s
```

### `CORE-30006`

**Message**

```markdown
Dropping the index failed. Table: %s, Column: %s
```

### `CORE-30007`

**Message**

```markdown
Getting the table metadata failed. Table: %s
```

### `CORE-30008`

**Message**

```markdown
Getting the table names in the namespace failed. Namespace: %s
```

### `CORE-30009`

**Message**

```markdown
Checking the namespace existence failed. Namespace: %s
```

### `CORE-30010`

**Message**

```markdown
Checking the table existence failed. Table: %s
```

### `CORE-30011`

**Message**

```markdown
Checking the index existence failed. Table: %s; Column: %s
```

### `CORE-30012`

**Message**

```markdown
Repairing the namespace failed. Namespace: %s
```

### `CORE-30013`

**Message**

```markdown
Repairing the table failed. Table: %s
```

### `CORE-30014`

**Message**

```markdown
Adding a new column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `CORE-30015`

**Message**

```markdown
Getting the namespace names failed
```

### `CORE-30016`

**Message**

```markdown
Getting the table metadata of the table being imported failed. Table: %s
```

### `CORE-30017`

**Message**

```markdown
Importing the table failed. Table: %s
```

### `CORE-30018`

**Message**

```markdown
Adding the raw column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `CORE-30019`

**Message**

```markdown
Upgrading the ScalarDB environment failed
```

### `CORE-30020`

**Message**

```markdown
Something wrong because WriteType is neither CAS nor SIMPLE
```

### `CORE-30021`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `CORE-30022`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `CORE-30023`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `CORE-30024`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `CORE-30025`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `CORE-30026`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `CORE-30027`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `CORE-30028`

**Message**

```markdown
Fetching the next result failed
```

### `CORE-30029`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `CORE-30030`

**Message**

```markdown
Committing the transaction failed. Details: %s
```

### `CORE-30031`

**Message**

```markdown
The Get operation failed. Details: %s
```

### `CORE-30032`

**Message**

```markdown
The Scan operation failed. Details: %s
```

### `CORE-30033`

**Message**

```markdown
The Put operation failed. Details: %s
```

### `CORE-30034`

**Message**

```markdown
The Delete operation failed. Details: %s
```

### `CORE-30035`

**Message**

```markdown
Beginning a transaction failed. Details: %s
```

### `CORE-30036`

**Message**

```markdown
Preparing records failed
```

### `CORE-30037`

**Message**

```markdown
Validation failed
```

### `CORE-30038`

**Message**

```markdown
Executing implicit pre-read failed
```

### `CORE-30039`

**Message**

```markdown
Reading a record from the underlying storage failed
```

### `CORE-30040`

**Message**

```markdown
Scanning records from the underlying storage failed
```

### `CORE-30041`

**Message**

```markdown
Rollback failed because the transaction has already been committed
```

### `CORE-30042`

**Message**

```markdown
Rollback failed
```

### `CORE-30043`

**Message**

```markdown
The Insert operation failed. Details: %s
```

### `CORE-30044`

**Message**

```markdown
The Upsert operation failed. Details: %s
```

### `CORE-30045`

**Message**

```markdown
The Update operation failed. Details: %s
```

### `CORE-30047`

**Message**

```markdown
Something went wrong while trying to save the data. Details: %s
```

### `CORE-30048`

**Message**

```markdown
Something went wrong while scanning. Are you sure you are running in the correct transaction mode? Details: %s
```

### `CORE-30049`

**Message**

```markdown
Failed to read CSV file. Details: %s.
```

### `CORE-30050`

**Message**

```markdown
Failed to CSV read header line. Details: %s.
```

### `CORE-30051`

**Message**

```markdown
Data chunk processing was interrupted. Details: %s
```

### `CORE-30052`

**Message**

```markdown
Failed to read JSON file. Details: %s.
```

### `CORE-30053`

**Message**

```markdown
Failed to read JSON Lines file. Details: %s.
```

## `CORE-4xxxx` status codes

The following are status codes and messages for the unknown transaction status error category.

### `CORE-40000`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `CORE-40001`

**Message**

```markdown
Committing state failed with NoMutationException, but the coordinator status does not exist
```

### `CORE-40002`

**Message**

```markdown
The state cannot be retrieved
```

### `CORE-40003`

**Message**

```markdown
The coordinator status is unknown
```

### `CORE-40004`

**Message**

```markdown
Aborting state failed with NoMutationException, but the coordinator status does not exist
```
